Fix glitch on iOS when adding to the cart.
iOS Safari is not happy with swapping the full <body> tag. This commit
uses the htmx multiswap extension to target the specific parts that
needs to be replaced.

--- a/reko/static/reko/reko.css
+++ b/reko/static/reko/reko.css
@@ -83,7 +83,7 @@ footer section {
     }
 }
 
-.continue {
+#order-button {
     position: sticky;
     bottom: var(--wa-space-m);
     display: flex;
